减少对中文字体的引用

--- a/mm/mm.tex
+++ b/mm/mm.tex
@@ -21,10 +21,10 @@
 \begin{document}
 \begin{CJK*}{UTF8}{song}
 
-  \title{\CJKfamily{hei} 操作系统原理}
-  \subtitle{\CJKfamily{hei} 第九章：内存管理}
-	\author{\CJKfamily{hei} 洪明坚}
-	\institute{\CJKfamily{hei} 重庆大学软件学院}
+  \title{操作系统原理}
+  \subtitle{第九章：内存管理}
+	\author{洪明坚}
+	\institute{重庆大学软件学院}
   \date{\today}
 
   \AtBeginSection[]
