--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -25,10 +25,10 @@
 \begin{document}
 \begin{CJK*}{UTF8}{song}  
 
-  \title{\CJKfamily{hei} 操作系统原理}
-  \subtitle{\CJKfamily{hei} 第一章：介 绍}
-	\author{\CJKfamily{hei} 洪明坚}
-	\institute{\CJKfamily{hei} 重庆大学软件学院}
+  \title{操作系统原理}
+  \subtitle{第一章：介 绍}
+	\author{洪明坚}
+	\institute{重庆大学软件学院}
   \date{\today}
 
   \AtBeginSection[]
