--- a/pm/pm.tex
+++ b/pm/pm.tex
@@ -37,10 +37,10 @@
 \begin{document}
 \begin{CJK*}{UTF8}{song}
 
-  \title{\CJKfamily{hei} 操作系统原理}
-  \subtitle{\CJKfamily{hei} 第四章：进程管理}
-	\author{\CJKfamily{hei} 洪明坚}
-	\institute{\CJKfamily{hei} 重庆大学软件学院}
+  \title{操作系统原理}
+  \subtitle{第四章：进程管理}
+	\author{洪明坚}
+	\institute{重庆大学软件学院}
   \date{\today}
 
   \AtBeginSection[]
