--- a/vm/vm.tex
+++ b/vm/vm.tex
@@ -22,10 +22,10 @@
 \begin{document}
 \begin{CJK*}{UTF8}{song}
 
-  \title{\CJKfamily{hei} 操作系统原理}
-  \subtitle{\CJKfamily{hei} 第十章：虚拟内存}
-  \author{\CJKfamily{hei} 洪明坚}
-  \institute{\CJKfamily{hei} 重庆大学软件学院}
+  \title{操作系统原理}
+  \subtitle{第十章：虚拟内存}
+  \author{洪明坚}
+  \institute{重庆大学软件学院}
   \date{\today}
 
   \AtBeginSection[]
