\htmladdnormallink在MacTeX 2025中不工作，但在TeXLive中可以工作。换成两个都能接受的\href

--- a/fs/fs.tex
+++ b/fs/fs.tex
@@ -271,7 +271,7 @@
       \item Dangling pointer problem \pause
         \begin{itemize}
         \item Some operating systems do not support acyclic-graph directory, such as MS-DOS \pause
-        \item UNIX/LINUX and Windows (7+) support it via \htmladdnormallink{\emph{symbol link}}{https://en.wikipedia.org/wiki/Symbolic\_link}
+        \item UNIX/LINUX and Windows (7+) support it via \href{https://en.wikipedia.org/wiki/Symbolic\_link}{\emph{symbol link}}
         \end{itemize}
       \end{itemize}
     \end{itemize}
