--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -56,11 +56,12 @@
 	      \end{itemize}
 	    \item{教材及参考资料} \pause
 	      \begin{itemize}
-	      \item{\htmladdnormallink{\textbf{Abraham Silberschatz, Operating System Concepts, 6th Edition, John Wiley \& Sons, Inc.}}{https://www.os-book.com}} \pause
+	      \item \href{https://www.os-book.com}{\textbf{Abraham Silberschatz, Operating System Concepts, 6th Edition, John Wiley \& Sons, Inc.}}  \pause
 	        \begin{itemize}
 	        \item{10th edition is also available.} \pause
+
 	        \end{itemize}
-	      \item{\htmladdnormallink{Andrew S. Tanenbaum, Modern operating System, 2nd Edition, Prentice Hall.}{https://www.cs.vu.nl/~ast/books/mos2}} \pause
+	      \item{\href{https://www.cs.vu.nl/~ast/books/mos2}{Andrew S. Tanenbaum, Modern operating System, 2nd Edition, Prentice Hall.}} \pause
 	      \item{Maurice J. Bach, The design of Unix operating system, Pearson education.} \pause
 	      \end{itemize}
 	    \begin{center}
@@ -305,7 +306,7 @@
 		    \item{IBM OS/2} \pause
 		    \item{Unix} \pause
 		      \begin{itemize}
-		      \item{\textbf{BSD} (Berkeley Software Distribution) Unix, including \htmladdnormallink{FreeBSD}{https://www.freebsd.org/}, \htmladdnormallink{OpenBSD}{https://www.openbsd.org/} and \htmladdnormallink{NetBSD}{https://www.netbsd.org/}} \pause
+		      \item{\textbf{BSD} (Berkeley Software Distribution) Unix, including \href{https://www.freebsd.org/}{FreeBSD}, \href{https://www.openbsd.org/}{OpenBSD} and \href{https://www.netbsd.org/}{NetBSD}} \pause
 		      \item{Solaris by Sun microsystem (acquired by Oracle on 2009/04/20)} \pause
 		      \item{Apple macOS} \pause
 		      \end{itemize}
