--- a/ostruct/ostruct.tex
+++ b/ostruct/ostruct.tex
@@ -323,7 +323,7 @@
     \begin{itemize}
     \item{Example 1} \pause
       \begin{itemize}
-      \item{The open source \htmladdnormallink{\textbf{Mach}}{https://www.cs.cmu.edu/afs/cs/project/mach/public/www/mach.html} from Carnegie Mellon University.} \pause
+      \item{The open source \href{https://www.cs.cmu.edu/afs/cs/project/mach/public/www/mach.html}{\textbf{Mach}} from Carnegie Mellon University.} \pause
         \begin{itemize}
         \item{Used as the kernel of the Apple macOS/iOS/tvOS/watchOS.} \pause
         \end{itemize}
@@ -390,17 +390,17 @@
     		\item{\textbf{Native (Full) virtualization} \pause - only partially simulates enough hardware to allow an \textbf{unmodified} operating system to run in isolation, but the \textbf{guest} operating system must be designed for the \textbf{same} type of CPU} \pause
     			\begin{itemize}
     			\item{VM/370 from IBM} \pause
-    			\item{\htmladdnormallink{KVM}{http://www.linux-kvm.org/page/Main\_Page} (Kernel-based Virtual Machine) for Linux} \pause
+    			\item{\href{http://www.linux-kvm.org/page/Main\_Page}{KVM} (Kernel-based Virtual Machine) for Linux} \pause
     			\end{itemize}
 			
       		\item{\textbf{Paravirtualization} \pause - does not simulate hardware but instead offers a special API that requires  \textbf{guest}  operating system \textbf{modifications} to run.} \pause
 		 	\begin{itemize}
-			\item{\htmladdnormallink{Xen}{http://www.xenproject.org/} from Cambridge University} \pause
+			\item{\href{http://www.xenproject.org/}{Xen} from Cambridge University} \pause
 		 	\end{itemize}
 		 
               	\item{\textbf{Emulation} \pause - simulates the complete hardware, allowing an \textbf{unmodified} operating system for a completely \textbf{different} CPU to run.} \pause
                 		\begin{itemize}
-                		\item{\htmladdnormallink{VMware}{https://www.vmware.com/}, \htmladdnormallink{Parallels}{https://www.parallels.com/}, \htmladdnormallink{VirtualBox}{https://www.virtualbox.org/}, \htmladdnormallink{QEMU}{https://www.qemu.org/},  \htmladdnormallink{MAME}{https://www.mamedev.org/}, etc} \pause
+                		\item{\href{https://www.vmware.com/}{VMware}, \href{https://www.parallels.com/}{Parallels}, \href{https://www.virtualbox.org/}{VirtualBox}, \href{https://www.qemu.org/}{QEMU},  \href{https://www.mamedev.org/}{MAME}, etc} \pause
                 		\end{itemize}
 
 	\end{itemize}
