--- a/thread/thread.tex
+++ b/thread/thread.tex
@@ -306,7 +306,7 @@
   \item{Win32} \pause
     \begin{itemize}
     \item{CreateThread, ExitThread and TerminateThread, etc.} \pause
-    \item{\htmladdnormallink{Pthreads for Win32}{http://sources.redhat.com/pthreads-win32}}
+    \item{\href{http://sources.redhat.com/pthreads-win32}{Pthreads for Win32}}
     \end{itemize}
   \end{itemize}
   \end{frame}
