不需要xcolor=pdftex也可以工作

--- a/comparch/comparch.tex
+++ b/comparch/comparch.tex
@@ -2,7 +2,7 @@
 %%
 %% $Id: comparch.tex,v 1.13 2008/03/18 07:14:41 hmj Exp $
 %%
-\documentclass[CJKutf8,xcolor=pdftex,dvipsnames,table]{beamer}
+\documentclass[CJKutf8,dvipsnames,table]{beamer}
 \usepackage{hyperref}
 \hypersetup{
   pdftitle={Operating System Concepts},
