--- a/deadlock/deadlock.tex
+++ b/deadlock/deadlock.tex
@@ -2,7 +2,7 @@
 %%
 %% $Id: deadlock.tex,v 1.6 2008/03/18 07:14:41 hmj Exp $
 %%
-\documentclass[CJKutf8,xcolor=pdftex,dvipsnames,table]{beamer}
+\documentclass[CJKutf8,dvipsnames,table]{beamer}
 \usepackage{hyperref}
 \hypersetup{
   pdftitle={Operating System Concepts},
