--- a/ps/ps.tex
+++ b/ps/ps.tex
@@ -1,4 +1,4 @@
-\documentclass[CJKutf8,xcolor=pdftex,dvipsnames,table]{beamer}
+\documentclass[CJKutf8,dvipsnames,table]{beamer}
 \usepackage{hyperref}
 \hypersetup{
   pdftitle={Operating System Concepts},
