准确切换到XeTeX了

--- a/comparch/comparch.tex
+++ b/comparch/comparch.tex
@@ -12,7 +12,21 @@
   colorlinks={true},
   linkcolor={blue},
 }
-\usepackage{CJKutf8}
+
+%% https://tex.stackexchange.com/questions/84652/is-there-a-macro-telling-which-os-were-using
+\usepackage{ifxetex,ifluatex}
+\newif\ifxetexorluatex % a new conditional starts as false
+\ifnum 0\ifxetex 1\fi\ifluatex 1\fi>0
+   \xetexorluatextrue
+\fi
+
+\ifxetexorluatex
+	\usepackage[slantfont,boldfont]{xeCJK}
+	\setCJKmainfont{STSong}
+\else
+	\usepackage{CJKutf8}
+\fi
+
 \usepackage{listings}
 \lstset{
   language=[ANSI]C,
@@ -38,7 +52,9 @@
 \setbeamertemplate{navigation symbols}{}
 
 \begin{document}
+\ifxetexorluatex\else
 \begin{CJK*}{UTF8}{song}
+\fi
 
   \title{操作系统原理}
   \subtitle{第二章：计算机系统结构}
@@ -877,5 +893,7 @@ int main()
   \end{frame}
 
   %% PAGE
+\ifxetexorluatex\else
 \end{CJK*}
+\fi
 \end{document}
