--- a/deadlock/deadlock.tex
+++ b/deadlock/deadlock.tex
@@ -12,7 +12,20 @@
   colorlinks={true},
   linkcolor={blue},
 }
-\usepackage{CJKutf8}
+
+%% https://tex.stackexchange.com/questions/84652/is-there-a-macro-telling-which-os-were-using
+\usepackage{ifxetex,ifluatex}
+\newif\ifxetexorluatex % a new conditional starts as false
+\ifnum 0\ifxetex 1\fi\ifluatex 1\fi>0
+   \xetexorluatextrue
+\fi
+
+\ifxetexorluatex
+	\usepackage[slantfont,boldfont]{xeCJK}
+	\setCJKmainfont{STSong}
+\else
+	\usepackage{CJKutf8}
+\fi
 
 \usetheme{Madrid}%{Warsaw}
 \usecolortheme{crane}
@@ -23,7 +36,9 @@
 \setbeamertemplate{navigation symbols}{}
 
 \begin{document}
+\ifxetexorluatex\else
 \begin{CJK*}{UTF8}{song}
+\fi
 
   \title{操作系统原理}
   \subtitle{第八章：死锁}
@@ -671,5 +686,7 @@
 \end{frame}
 
   %% PAGE
+\ifxetexorluatex\else
 \end{CJK*}
+\fi
 \end{document}
