--- a/ps/ps.tex
+++ b/ps/ps.tex
@@ -8,7 +8,21 @@
   colorlinks={true},
   linkcolor={blue},
 }
-\usepackage{CJKutf8}
+
+%% https://tex.stackexchange.com/questions/84652/is-there-a-macro-telling-which-os-were-using
+\usepackage{ifxetex,ifluatex}
+\newif\ifxetexorluatex % a new conditional starts as false
+\ifnum 0\ifxetex 1\fi\ifluatex 1\fi>0
+   \xetexorluatextrue
+\fi
+
+\ifxetexorluatex
+	\usepackage[slantfont,boldfont]{xeCJK}
+	\setCJKmainfont{STSong}
+\else
+	\usepackage{CJKutf8}
+\fi
+
 \usepackage{listings}
 \lstset{
 	language=[ANSI]C,
@@ -34,7 +48,9 @@
 \setbeamertemplate{navigation symbols}{}
 
 \begin{document}
+\ifxetexorluatex\else
 \begin{CJK*}{UTF8}{song}
+\fi
 
   \title{操作系统原理}
   \subtitle{第七章：进程同步}
@@ -1665,5 +1681,7 @@ if(x_count > 0) {
   \end{center}
   \end{frame}
 
+\ifxetexorluatex\else
 \end{CJK*}
+\fi
 \end{document}
