--- a/fs/fs.tex
+++ b/fs/fs.tex
@@ -8,7 +8,20 @@
   colorlinks={true},
   linkcolor={blue},
 }
-\usepackage{CJKutf8}
+
+%% https://tex.stackexchange.com/questions/84652/is-there-a-macro-telling-which-os-were-using
+\usepackage{ifxetex,ifluatex}
+\newif\ifxetexorluatex % a new conditional starts as false
+\ifnum 0\ifxetex 1\fi\ifluatex 1\fi>0
+   \xetexorluatextrue
+\fi
+
+\ifxetexorluatex
+	\usepackage[slantfont,boldfont]{xeCJK}
+	\setCJKmainfont{STSong}
+\else
+	\usepackage{CJKutf8}
+\fi
 
 \usetheme{Madrid}%{Warsaw}
 \usecolortheme{crane}
@@ -19,7 +32,9 @@
 \setbeamertemplate{navigation symbols}{}
 
 \begin{document}
+\ifxetexorluatex\else
 \begin{CJK*}{UTF8}{song}
+\fi
 
   \title{操作系统原理}
   \subtitle{第十一章：文件系统}
@@ -943,5 +958,7 @@
 \fi
 
   %% PAGE
+\ifxetexorluatex\else
 \end{CJK*}
+\fi
 \end{document}
