--- a/vm/vm.tex
+++ b/vm/vm.tex
@@ -8,7 +8,21 @@
   colorlinks={true},
   linkcolor={blue},
 }
-\usepackage{CJKutf8}
+
+%% https://tex.stackexchange.com/questions/84652/is-there-a-macro-telling-which-os-were-using
+\usepackage{ifxetex,ifluatex}
+\newif\ifxetexorluatex % a new conditional starts as false
+\ifnum 0\ifxetex 1\fi\ifluatex 1\fi>0
+   \xetexorluatextrue
+\fi
+
+\ifxetexorluatex
+	\usepackage[slantfont,boldfont]{xeCJK}
+	\setCJKmainfont{STSong}
+\else
+	\usepackage{CJKutf8}
+\fi
+
 \usepackage{mathptmx} %https://forum.ubuntu.com.cn/viewtopic.php?f=35&t=269943
 
 \usetheme{Madrid}%{Warsaw}
@@ -20,7 +34,9 @@
 \setbeamertemplate{navigation symbols}{}
 
 \begin{document}
+\ifxetexorluatex\else
 \begin{CJK*}{UTF8}{song}
+\fi
 
   \title{操作系统原理}
   \subtitle{第十章：虚拟内存}
@@ -1066,7 +1082,9 @@
     \end{center}
   \end{frame}
 
+\ifxetexorluatex\else
 \end{CJK*}
+\fi
 \end{document}
 
 %%% Local Variables: 
