--- a/deadlock/deadlock.tex
+++ b/deadlock/deadlock.tex
@@ -22,7 +22,12 @@
 
 \ifxetexorluatex
 	\usepackage[slantfont,boldfont]{xeCJK}
-	\setCJKmainfont{STSong}
+	\usepackage{ifplatform}
+	\iflinux
+		\setCJKmainfont{AR PL SungtiL GB} % 源于Ubuntu的系统应该有这个字体
+	\else
+		\setCJKmainfont{STSong} % Windows和MacOS貌似都有这个字体
+	\fi
 \else
 	\usepackage{CJKutf8}
 \fi
